@@ -1205,7 +1205,7 @@ public final class PatchedHtmlRenderer {
     private  static final boolean gtkShouldAntialias() {
         if (gtkAA == null) {
             Object o = Toolkit.getDefaultToolkit().getDesktopProperty("gnome.Xft/Antialias"); //NOI18N
-            gtkAA = new Integer(1).equals(o) ? Boolean.TRUE : Boolean.FALSE;
+            gtkAA = Integer.valueOf(1).equals(o) ? Boolean.TRUE : Boolean.FALSE;
         }
 
         return gtkAA.booleanValue();
